# diffphys

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  README.md  env_cuda.py  env_l2f.py  l2f_cuda_backend.py  l2f_full_cuda_backend.py  model.py  train.py  verify_rdac_sampler.sh
checkpoints/: h500_smoke_motor_gru.pt  smoke_motor_gru.pt
configs/: direct_h500.args  smoke.args
cuda_ext/: binding.cpp  full_rollout_kernel.cu  l2f_step_kernel.cu
logs/: train.csv  train.stdout
reports/: launch_command.txt  long_train_curves.csv  long_train_summary.txt  per_dynamics_bin_summary.csv
rl-tools/: .gitignore  CMakeLists.txt
rl-tools/reports/: clf_euler_h16_objective_patch.md  h128_stability_and_sampler_report.md
rl-tools/reports/clf_closed_loop_training_patch/: recheck_validate_nonzero.stdout  recheck_validate_zero.stdout  report.md
rl-tools/reports/clf_euler_h16_validation/: batch_bin_counts.csv  cpu_default_horizon.csv  cpu_default_horizon.stdout  cpu_h128_override.csv  cpu_h128_override.stdout  cpu_hover_relative_smoke.csv  cpu_hover_relative_smoke.stdout  cuda_action_center_parity.stdout  cuda_hover_relative_parity.stdout  cuda_nonzero_clf_out_att_parity.stdout  cuda_zero_weight_parity.stdout  cuda_zero_weight_parity_hover_patch.stdout  final_horizon_override_build.stdout  horizon_override_build.stdout  horizon_override_rebuild_clean.stdout  objective_gradient_conflict_cuda.stdout  objective_gradient_conflict_cuda_baseline.stdout  per_dynamics_bin_summary.csv  persistent_boundary_build.stdout  physics_check_clf_validation.stdout  physics_check_clf_validation_final.stdout  physics_check_clf_validation_with_conflict.stdout  physics_check_clf_validation_with_oracle.stdout  physics_check_clf_validation_with_oracle_wide.stdout  recheck_build_eval_action_metrics.stdout  recheck_build_hover_relative.stdout  recheck_build_physics_window_oracle.stdout  recheck_physics_check_attitude_sign_eta_scan.stdout  recheck_physics_check_clf_validation_refined_oracle.stdout  recheck_physics_check_clf_validation_window_oracle.stdout  recheck_physics_check_hover_relative.stdout  recheck_physics_check_local_direction_exists.stdout  recheck_physics_check_local_direction_gate.stdout  recheck_physics_check_sequence_oracle.stdout  recheck_physics_check_sequence_oracle_final.stdout  recheck_physics_check_sequence_oracle_greedy_seed.stdout  recheck_physics_check_sequence_window_alpha.stdout  report.md  train_log_field_check.csv  train_log_field_check.stdout  (+1 more)
rl-tools/reports/failure_replay_smoke/: gate.csv  train.csv  train.stdout
rl-tools/reports/fixed_h32_h64_h128_conservative_b8192/: log.csv  log.csv.chunk_0.csv  log.csv.chunk_1.csv  log.csv.chunk_2.csv  log.csv.chunk_3.csv  log.csv.chunk_4.csv  log.csv.chunk_5.csv  log.csv.chunk_6.csv  log.csv.chunk_7.csv  log.csv.chunk_8.csv  report.md
rl-tools/reports/gpu_curriculum_h32_h64_h128_b49152/: log.csv  log.csv.chunk_0.csv  log.csv.chunk_1.csv  log.csv.chunk_2.csv  log.csv.chunk_3.csv  log.csv.chunk_4.csv  log.csv.chunk_5.csv
rl-tools/reports/h1000_gate_smoke/: gate.csv  train.csv  train.stdout
rl-tools/reports/h128_long_20s_eval/: eval_h1024_e256.csv  eval_h1500_e256.csv  eval_h2000_e256.csv  eval_h256_e256.csv  eval_h3000_e64.csv  eval_h320_e256.csv  eval_h384_e256.csv  eval_h448_e256.csv
rl-tools/reports/h16_moving_setpoint_pipeline/: eval_circle_h16.csv  eval_figure8_h16.csv  eval_fixed_h16.csv  eval_local_fixed_metrics_check.csv  eval_step_h16.csv  report.md  train_accel_component_check_1.csv  train_component_check_1.csv  train_smoke_20.csv
rl-tools/reports/h16_raptor_l2f_recovery_pipeline/: completion_audit.md  eval_circle_smoke_500.csv  eval_figure8_smoke_500.csv  eval_fixed_fixed_smoke_500.csv  eval_mixed_smoke_500.csv  eval_step_smoke_500.csv  h16_only_long_stability_recommendation.md  long_horizon_failure_diagnosis.md  report.md  train_fixed_fixed_smoke_20.csv  train_window_smoke_3.csv
rl-tools/reports/h32_h64_resetopt_conservative_b49152/: log.csv.chunk_0.csv  report.md
rl-tools/reports/h64_h128_20s_compare/: eval_h128_h512_e256.csv  (+4 more)
rl-tools/src/foundation_policy/: .gitignore  CMakeLists.txt  equivalent_dynamics.h
rl-tools/src/foundation_policy/diff_pre_training/: README.md  checkpoint_io.h  cli_options.h  config.h  cuda_main.cu  eval_utils.h  gpu_rollout.cu  gpu_rollout.h  gradient_utils.h  logging_utils.h  loop.h  loss.h  main.cpp  physics_check.cpp  rdac_operations.h
rl-tools/src/foundation_policy/diff_pre_training/scripts/: run_sampled_dynamics_audit.sh  summarize_fixed_10seed_audit.py
rl-tools/src/foundation_policy/post_training/: actor_equivalence_check.cpp  config.h  evaluate_student.cpp  main.cpp  runtime_options.h
rl-tools/src/foundation_policy/post_training/scripts/: run_teacher_cost_pilot.sh
rl-tools/src/foundation_policy/pre_training/: main.cpp  sample_dynamics_parameters.cpp
rl-tools/src/rl/environments/l2f/: CMakeLists.txt  dr_sample.cpp
rl-tools/src/rl/environments/l2f/dr_sac/: l2f_dr_sac.cpp
runs/h500_smoke/: train.csv
runs/l2f_bs512_1000_steps/: eval.csv  eval.stdout  eval_command.sh  train.csv  train.stdout  train_command.sh  trajectories.csv
runs/smoke/: train.csv
tools/: gradient_root_cause_audit.py  validate_cuda_vjp.py
verify_rdac_sampler_full/: sampler_dump_4096.csv  sampler_dump_4096.stdout  sampler_summary.txt  smoke_h1.csv  smoke_h1.stdout  smoke_h16.csv  smoke_h16.stdout  train_h16_20000_curves.csv  train_h16_5000_curves.csv
(+874 files in other folders)
